fix: cancelar inscricao user id